--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^2.51.5",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-daisyui": "^3.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
