--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "enotebook-react",
-  "main": "public/electron.js",
+  "main": "src/electron.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "daisyui": "^2.51.5",
     "history": "^5.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-daisyui": "^3.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.1",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "react-start": "react-scripts start",
-    "electron-start": "electron .",
-    "start": "concurrently \"npm run react-start\" \"wait-on tcp:127.0.0.1:3000 && npm run electron-start\"",
+    "start": "react-scripts start",
+    "dev": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
