--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "enotebook-react",
+  "description": "Note-taking Application",
   "main": "src/electron.js",
   "version": "1.0.0",
   "private": true,
@@ -12,6 +13,7 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "daisyui": "^2.51.5",
+    "electron-squirrel-startup": "^1.0.0",
     "history": "^5.3.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
@@ -28,11 +30,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "electron-forge start",
     "dev": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "eslintConfig": {
     "extends": [
@@ -53,7 +57,14 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "electron": "^24.1.2",
     "wait-on": "^7.0.1"
-  }
+  },
+  "author": "Vaidik Rungta"
 }
