--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "electron-forge start",
+    "start": "react-scripts start",
     "dev": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
