--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "electron": "^24.1.2",
+    "electron-packager": "^17.1.2",
     "wait-on": "^7.0.1"
   },
   "author": "Vaidik Rungta"
