--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "eNotebook",
+  "name": "enotebook",
+  "homepage": ".",
   "description": "Note-taking Application",
   "main": "src/electron.js",
   "version": "1.0.0",
@@ -13,6 +14,7 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "daisyui": "^2.51.5",
+    "electron": "^27.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "history": "^5.3.0",
     "https-browserify": "^1.0.0",
@@ -63,9 +65,7 @@
     "@electron-forge/maker-squirrel": "^6.2.1",
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
-    "electron": "^24.1.2",
-    "electron-packager": "^17.1.2",
     "wait-on": "^7.0.1"
   },
-  "author": "Vaidik Rungta"
+  "author": "Vaidik"
 }
